# unitree_ros

unitree_legged_msgs/: CMakeLists.txt
unitree_legged_msgs/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
unitree_legged_msgs/install/unitree_legged_msgs/include/unitree_legged_msgs/msg/: cartesian.h  cartesian.hpp  high_cmd.h  high_cmd.hpp  high_state.h  high_state.hpp  imu.h  imu.hpp  led.h  led.hpp  low_cmd.h  low_cmd.hpp  low_state.h  low_state.hpp  motor_cmd.h  motor_cmd.hpp  motor_state.h  motor_state.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  walk.h  walk.hpp
unitree_legged_msgs/install/unitree_legged_msgs/share/unitree_legged_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
unitree_legged_msgs/install/unitree_legged_msgs/share/unitree_legged_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  unitree_legged_msgsConfig-version.cmake  unitree_legged_msgsConfig.cmake  unitree_legged_msgs__rosidl_typesupport_cExport.cmake  unitree_legged_msgs__rosidl_typesupport_cppExport.cmake  unitree_legged_msgs__rosidl_typesupport_introspection_cppExport.cmake
unitree_legged_msgs/log/: latest_build  latest_list
unitree_legged_msgs/msg/: HighCmd.msg  HighState.msg  LowCmd.msg  LowState.msg  MotorCmd.msg  MotorState.msg  Walk.msg  walk_2s.msg
unitree_legged_real/: CMakeLists.txt
unitree_legged_real/include/: convert.h
unitree_legged_real/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
unitree_legged_real/install/unitree_legged_real/lib/unitree_legged_real/: walk_client
unitree_legged_real/install/unitree_legged_real/share/unitree_legged_real/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
unitree_legged_real/install/unitree_legged_real/share/unitree_legged_real/cmake/: ament_cmake_export_include_directories-extras.cmake  unitree_legged_realConfig.cmake
unitree_legged_real/log/: latest_build  latest_list
unitree_legged_real/src/: send_msg.cpp  walk_client.cpp  walk_instruction.cpp  walk_operators.cpp
unitree_legged_real/src/exe/: sample.cpp  send_msg.cpp  walk_mode.cpp  walk_operators.cpp
(+138 files in other folders)
